Added layout and styles for the header

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -17,7 +17,7 @@ Grey dark 3: #999
 */
 
 :root {
-    --color-pimary: #eb2f64;
+    --color-primary: #eb2f64;
     --color-primary-light: #FF3366;
     --color-primary-dark: #BA265D;
 
