--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -8,9 +8,13 @@
 }
 
 .header {
+    font-size: 2rem;
     height: 9rem;
     background-color: #fff;
     border-bottom: var(--color-grey-light-2);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .content {
